# malloc-from-scratch

./: .clang-format  CMakeLists.txt  README.md  notes.md
include/: mymem.h
src/: free.c  main.c  malloc.c  utils.c
